--- a/libs/services-statistics/src/lib/components/services-statistics-activity-table/services-statistics-activity-table.component.html
+++ b/libs/services-statistics/src/lib/components/services-statistics-activity-table/services-statistics-activity-table.component.html
@@ -1,6 +1,7 @@
 
 
-<p-table [value]="activities" dataKey="id">
+<p-table [value]="activities" dataKey="id"
+         styleClass="p-datatable-striped" responsiveLayout="scroll">
   <ng-template pTemplate="header">
     <tr>
       <th>Id</th>
