--- a/apps/services-eval-ui/src/app/pages/support/support.component.html
+++ b/apps/services-eval-ui/src/app/pages/support/support.component.html
@@ -1,4 +1,4 @@
-<div class="surface-ground px-4 py-5 md:px-6 lg:px-8">
+<div class="grid">
 
   <div class="col-12">
     <services-statistics-support-cards [supportStatistics]="supportStatistics" [servicesStatistics]="servicesStatistics"></services-statistics-support-cards>
