--- a/apps/services-eval-ui/src/app/pages/dashboard/dashboard.component.html
+++ b/apps/services-eval-ui/src/app/pages/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="surface-ground px-4 py-5 md:px-6 lg:px-8">
+<div class="grid">
 
 <!--  <div class="col-12">-->
 <!--    <services-statistics-cards [consultantStatistics]="consultantStatistics" [servicesStatistics]="servicesStatistics"></services-statistics-cards>-->
